--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="script" href="script.js">
+    <script type="text/javascript" src="script.js" defer></script>
     <title>Book Library</title>
 </head>
 <body>
     <h1>This will be a book library!</h1>
+    <button id="test">button</button>
 </body>
 </html>
