removed comment about js testing section. Switched button name and ID to be properlly named

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>This will be a book library!</h1>
-    <button id="test">button</button>
+    <button id="addBookBtn">Add New Book</button>
     <div id="bookFormModal" class="modal">
         <span class="close">&times;</span>
         <form id="bookForm">
