--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
           <button type="submit">Add Book</button>
         </form>
     </div>
+    <div class="libraryDisplay">
+
+    </div>
 </body>
 </html>
