added basic style to the website and updated the html to say Dans book Library

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Book Library</title>
 </head>
 <body>
-    <h1>This will be a book library!</h1>
+    <h1>Dan's book library!</h1>
     <button id="addBookBtn">Add New Book</button>
     <div id="bookFormModal" class="modal">
         <span class="close">&times;</span>
